--- a/index.html
+++ b/index.html
@@ -3,56 +3,77 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Investitsiya hisoblagich</title>
+  <title>Investitsiya hisoblagich — barcha davrlar</title>
+  <meta name="description" content="Investitsiya hisoblagich — barcha davrlar" />
   <link rel="stylesheet" href="style.css" />
-  <script defer src="script.js"></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="container">
-    <h1>Investitsiya hisoblagichi</h1>
-    <p class="muted">Summa, yillar va foizni kiriting. "Har oy" ni tanlasangiz oyma-oy kupon bo‘ladi.</p>
+  <div class="wrap">
+    <div class="card">
+      <h1>Investitsiya hisoblagich — barcha davrlar</h1>
+      <p style="margin:0;color:#475569;font-size:13px">
+        Boshlang'ich summa, muddat, foiz va kerak bo'lsa har oy qo'shiladigan summani kiriting. "Oyma-oy" tanlansa oyma-oy hisoblanadi.
+      </p>
 
-    <form id="form">
-      <div>
-        <label for="principal">Boshlang'ich summa (so'm yoki boshqa valuta)</label>
-        <input id="principal" type="number" step="0.01" min="0" value="15000" />
-      </div>
-      <div>
-        <label for="years">Yillar soni</label>
-        <input id="years" type="number" step="1" min="0" value="3" />
-      </div>
-      <div>
-        <label for="rate">Foiz qiymati</label>
-        <input id="rate" type="number" step="0.01" min="0" value="12" />
-      </div>
-      <div>
-        <label for="rateType">Foiz turi</label>
-        <select id="rateType">
-          <option value="year">Yillik foiz</option>
-          <option value="month">Oylik foiz</option>
-        </select>
-      </div>
-
-      <div class="full">
-        <div class="checkbox">
-          <input id="compoundMonthly" type="checkbox" />
-          <label for="compoundMonthly">Har oy (oyma-oy kupon)</label>
+      <form id="form">
+        <div>
+          <label for="principal">Boshlang'ich summa</label>
+          <input id="principal" type="number" min="0" step="0.01" value="1000000">
         </div>
 
-        <div style="margin-left:auto;">
-          <button id="calc" type="button">Hisoblash</button>
+        <div>
+          <label for="years">Yillar (butun son)</label>
+          <input id="years" type="number" min="0" step="1" value="1">
         </div>
-      </div>
-    </form>
 
-    <div class="result" id="result" style="display:none;">
-      <div class="summary">
-        <div class="card"><div class="muted">Yakuniy summa</div><div id="finalBalance" style="font-weight:700; margin-top:6px;">0</div></div>
-        <div class="card"><div class="muted">Jami foiz (daromad)</div><div id="totalInterest" style="font-weight:700; margin-top:6px;">0</div></div>
-        <div class="card"><div class="muted">Period turi</div><div id="periodType" style="font-weight:700; margin-top:6px;">-</div></div>
-      </div>
+        <div>
+          <label for="rate">Foiz (% — raqam)</label>
+          <input id="rate" type="number" min="0" step="0.01" value="20">
+        </div>
 
-      <div id="tableWrap"></div>
+        <div>
+          <label for="rateType">Foiz turi</label>
+          <select id="rateType">
+            <option value="yearly">Yillik</option>
+            <option value="monthly">Oylik</option>
+          </select>
+        </div>
+
+        <div>
+          <label for="compoundType">Qo'shilish davri</label>
+          <select id="compoundType">
+            <option value="monthly">Oyma-oy</option>
+            <option value="yearly">Yiliga bir marta</option>
+          </select>
+        </div>
+
+        <div>
+          <label for="monthlyContribution">Har oy qo'shiladigan summa (ixtiyoriy)</label>
+          <input id="monthlyContribution" type="number" min="0" step="0.01" placeholder="0">
+        </div>
+
+        <div class="full">
+          <div class="checkbox">
+            <input id="startToday" type="checkbox" checked>
+            <label for="startToday">Bugun boshlash (sanani jadvalga yozadi)</label>
+          </div>
+          <div style="margin-left:auto;">
+            <button id="calcBtn" type="button">Hisoblash</button>
+            <button id="exportCsv" type="button" style="margin-left:8px; background:#0ea5a4;">CSV yuklab olish</button>
+          </div>
+        </div>
+      </form>
+
+      <div class="result" id="result" style="display:none;">
+        <div class="summary">
+          <div class="stat"><div style="color:#64748b;font-size:12px">Yakuniy summa</div><div id="finalBalance" style="font-weight:700;margin-top:6px">0</div></div>
+          <div class="stat"><div style="color:#64748b;font-size:12px">Jami foiz</div><div id="totalInterest" style="font-weight:700;margin-top:6px">0</div></div>
+          <div class="stat"><div style="color:#64748b;font-size:12px">Period turi</div><div id="periodType" style="font-weight:700;margin-top:6px">-</div></div>
+        </div>
+
+        <div class="table-wrap" id="tableWrap"></div>
+      </div>
     </div>
   </div>
 </body>
